# easyhash

./: CMakeLists.txt  LICENSE  build.sh  easyhashConfig.cmake.in  fnv1a_hash.h  fnv1a_test.cpp
easyhash/: CMakeLists.txt
easyhash/include/: fnv1a_hash.h
tests/: CMakeLists.txt
